@@ -225,7 +225,7 @@ class FrontendForm(ModelForm):
                            "mdatp_api_tenant", "mdatp_api_appid", "mdatp_api_secret",
                            "cortex_xdr_host", "cortex_xdr_apikey_id", "cortex_xdr_apikey",
                            "cybereason_host", "cybereason_username", "cybereason_password",
-                           "cisco_meraki_apikey", 'proofpoint_tap_host', 'proofpoint_tap_endpoint', 'proofpoint_tap_principal',
+                           "cisco_meraki_apikey", "cisco_meraki_get_security_logs", 'proofpoint_tap_host', 'proofpoint_tap_endpoint', 'proofpoint_tap_principal',
                            "carbon_black_host", 'carbon_black_orgkey', 'carbon_black_apikey',
                            "netskope_host", 'netskope_apikey',
                            'rapid7_idr_host', 'rapid7_idr_apikey',
@@ -332,7 +332,7 @@ class FrontendForm(ModelForm):
                   "mdatp_api_tenant", "mdatp_api_appid", "mdatp_api_secret",
                   "cortex_xdr_host", "cortex_xdr_apikey_id", "cortex_xdr_apikey",
                   "cybereason_host", "cybereason_username", "cybereason_password",
-                  "cisco_meraki_apikey", 'proofpoint_tap_host', 'proofpoint_tap_endpoint', 'proofpoint_tap_principal',
+                  "cisco_meraki_apikey", "cisco_meraki_get_security_logs", 'proofpoint_tap_host', 'proofpoint_tap_endpoint', 'proofpoint_tap_principal',
                   "proofpoint_tap_secret",
                   "sentinel_one_host", "sentinel_one_apikey", "sentinel_one_account_type",
                   "netskope_host", "netskope_apikey",
@@ -463,6 +463,7 @@ class FrontendForm(ModelForm):
             'cybereason_username': TextInput(attrs={'class': 'form-control'}),
             'cybereason_password': TextInput(attrs={'type': "password", 'class': 'form-control'}),
             'cisco_meraki_apikey': TextInput(attrs={'class': 'form-control'}),
+            'cisco_meraki_get_security_logs': CheckboxInput(attrs={'class': 'js-switch'}),
             'proofpoint_tap_host': TextInput(attrs={'class': 'form-control'}),
             'proofpoint_tap_endpoint': Select(attrs={'class': 'form-control select2'}),
             'proofpoint_tap_principal': TextInput(attrs={'class': 'form-control'}),
