@@ -1184,6 +1184,13 @@
                             {{ form.cisco_meraki_apikey.errors|safe }}
                           </div>
                         </div>
+                        <div class="form-group">
+                          <label class="col-sm-3 control-label">{{ form.cisco_meraki_get_security_logs.label }}</label>
+                          <div class="col-sm-5">
+                            {{ form.cisco_meraki_get_security_logs }}
+                            {{ form.cisco_meraki_get_security_logs.errors|safe }}
+                          </div>
+                        </div>
                       </div>
                       <div class="col-md-12 api_clients_row" id="api_cybereason_row">
                         <div class="form-group">
